# poo_1719110304

./: README.md  pyproject.toml
Estructura_datos/: recursividad.py  recursividad1.1.py
Semana_10/: Alumnos.py
Semana_11/: diccionario.py  peliculas.txt
Semana_12/: excepciones.py
Semana_2/: CAvion.py  CBanco.py  CCajero.py  CCalculadora.py  CClassroom.py  CCoche.py  CEstudiante.py  CFutbolista.py  CSerieTV.py  CVacaciones.py
Semana_3/: CAvion.py  CBanco.py  CCajero.py  CCalculadora.py  CClassroom.py  CCoche.py  CEstudiante.py  CFutbolista.py  CSeriesTv.py  CVacaciones.py
Semana_4/: CAvion.py  CBanco.py  CCadenas_String.py  CCajero.py  CCalculadora.py  CClassroom.py  CCoche.py  CEstudiante.py  CFutbolista.py  CSeries.py  CVacaciones.py
Semana_5/: Palindromo.py
Semana_6/: Codigo_Cesar.py
Semana_7/: Codigo_Archivo.py  amor.py  archivoCifrado.txt
Semana_8/: Arreglos_temperaturas.py  temperatura.txt  temperaturas.txt
Semana_9/: ArreglosTemperaturas.py  temperatura.txt
