[tool.poetry]
name = "poo1719110304"
version = "0.1.0"
description = ""
authors = ["DarkStark9608 <1719110304@utectulancingo.edu.mx>"]

[tool.poetry.dependencies]
python = "^3.8"
unidecode = "^1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
